[hdout.tv] add mark/unmark of episode

--- a/plugin.video.relict.hdout.tv/resources/language/English/strings.xml
+++ b/plugin.video.relict.hdout.tv/resources/language/English/strings.xml
@@ -33,4 +33,6 @@
 	<string id="30302">Remove from favorites on HDOut.TV</string>
 	<string id="30311">Add to favorites on UAJ.CC</string>
 	<string id="30312">Remove from favorites on UAJ.CC</string>
+	<string id="30313">Mark as viewed</string>
+	<string id="30314">UnMark as viewed</string>
 </strings>
