--- a/plugin.video.relict.hdout.tv/resources/language/Russian/strings.xml
+++ b/plugin.video.relict.hdout.tv/resources/language/Russian/strings.xml
@@ -33,4 +33,6 @@
 	<string id="30302">Не смотрю больше на HDOut.TV</string>
 	<string id="30311">Буду смотреть на UAJ.CC</string>
 	<string id="30312">Не смотрю больше на UAJ.CC</string>
+	<string id="30313">Отметить как просмотренный</string>
+	<string id="30314">Отметить как не прсмотренный</string>
 </strings>
